# rust-music

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
assets/fonts/: README.md
progress/: README.md  progress.md
src/: main.rs
src/application/: main_menu.rs  mod.rs  system.rs
src/application/windows/: mixer.rs  mod.rs  sampler.rs  settings.rs
src/data/: audio_file.rs  audio_settings.rs  channel.rs  mod.rs  project.rs  system_state.rs  ui_event_handler.rs
src/data/audio_engine/: engine.rs  mod.rs  settings.rs  updates.rs
src/data/mixer/: channel.rs  mixer.rs  mod.rs
src/data/sampler/: audio_file.rs  mod.rs
src/data/ui_event/: handler.rs  mod.rs  ui_event.rs
src/data/vsts/: mod.rs  vsts.rs
src/resources/: assets.rs  enums.rs  mod.rs  strings.rs  ui_event.rs
src/utilities/: audio.rs  format.rs
src/windows/: application.rs  main_menu.rs  menu.rs  mixer.rs  mod.rs  sampler.rs  settings.rs
src/windows/mixer/: channel.rs  mixer.rs  mod.rs
