[package]
name = "tombo-music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tombo-music"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.21.0", features = ["dark-light"] }
egui = "0.21.0"
im = "15.1.0"
rfd = "0.11.0"
egui_extras_xt = { git = "https://github.com/xTibor/egui_extras_xt", version = "0.1.0", features = ["knobs", "displays"] }
cpal = "0.15.0"
strum = { version = "0.24.1" }
rand = "0.8.5"
rtrb = "0.2.3"
# egui_extras_xt = { path = "../egui_extras_xt/egui_extras_xt", version="0.1.0", features = ["knobs", "displays"] }
